--- a/.github/workflows/main_mahesh-react-next-js.yml
+++ b/.github/workflows/main_mahesh-react-next-js.yml
@@ -26,14 +26,18 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          npm run build 
           npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: |
+            .next
+            node_modules
+            public
+            package.json
 
   deploy:
     runs-on: ubuntu-latest
