--- a/.github/workflows/main_mahesh-react-next-js.yml
+++ b/.github/workflows/main_mahesh-react-next-js.yml
@@ -23,11 +23,13 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install Dependencies
         run: |
-          npm install
+          npm ci
+
+      - name: npm build
+        run: |
           npm run build 
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
