--- a/.github/workflows/main_mahesh-react-next-js.yml
+++ b/.github/workflows/main_mahesh-react-next-js.yml
@@ -40,6 +40,7 @@ jobs:
             node_modules
             public
             package.json
+            next.config.js
 
   deploy:
     runs-on: ubuntu-latest
